# app/Models/Religion.php
@@ -30,11 +30,19 @@ class Religion extends Model
     protected function imageUrl(): Attribute
     {
         return Attribute::get(function (): ?string {
-            if (! $this->image || ! Storage::disk('local')->exists($this->image)) {
+            if (! $this->image) {
                 return null;
             }
 
-            return route('religions.image', $this->id);
+            if (str_starts_with($this->image, 'http://') || str_starts_with($this->image, 'https://')) {
+                return $this->image;
+            }
+
+            if (str_starts_with($this->image, 'storage/')) {
+                return asset($this->image);
+            }
+
+            return asset('storage/' . $this->image);
         });
     }
 
