# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\OnboardingStepController;
+use App\Http\Controllers\Api\ReligionController;
 use App\Http\Controllers\Api\UsersController;
 use Illuminate\Support\Facades\Route;
 
@@ -15,4 +16,5 @@ Route::post('/register', [UsersController::class, 'register']);
 Route::post('/users/{id}', [UsersController::class, 'update']);
 Route::delete('/users/{id}', [UsersController::class, 'destroy']);
 
+Route::get('/religions', [ReligionController::class, 'index']);
 Route::get('/onboarding-steps', [OnboardingStepController::class, 'index']);
